# ccas

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  README.zh-TW.md  docker-compose.local.yml.example  docker-compose.override.yml  docker-compose.yaml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 066eb5d1c70c_add_category_source.py  08828cd4e8ca_add_staged_attachments_table.py  0a2c400f1179_add_pipeline_runs.py  11ca9b74b00c_add_staged_attachment_source_type.py  1334f4fe5f73_add_staged_attachment_gmail_part_id.py  2570bbdebf54_add_setup_tables.py  2b407df3b1b5_create_initial_tables.py  413739f494ff_add_notified_to_budget_alerts.py  5f9d4a7b3c8e_add_user_rules_budgets.py  65070f49fd2d_add_ix_transactions_trans_date.py  7f3ae66246a3_add_bank_login_credentials.py  9b3e2c8a4f10_add_reminder_settings.py  a344841591e6_add_bill_due_date_estimated.py  a4b8c2d6e0f1_add_transaction_user_fields.py  c1d2e3f4a5b6_add_transaction_category_merchant_indexes.py  c3a1f5e8d9b2_add_payment_reminders_table.py  ca5a1f05744d_add_bill_is_notified_column.py  ec74b5138c9f_add_missing_indexes.py  f3a9d8c1b2e4_rename_budget_amount_columns_to_ntd.py
backend/docker-image/: .env.example
backend/docker-image/scripts/: check-env.sh  docker-entrypoint.sh
backend/scripts/: dedupe_staged_attachments.py  eval_captcha.py  harvest_captcha.py  migrate_staging_paths.py  reimport.py  seed.py
backend/src/ccas/: __init__.py  config.py  constants.py  errors.py  log.py  messaging.py
backend/src/ccas/api/: app.py  deps.py  ratelimit.py  schemas.py
backend/src/ccas/bot/: __main__.py  app.py  auth.py  client.py  formatting.py  handlers.py  job.py  notifications.py  queries.py
backend/src/ccas/classifier/: __init__.py  engine.py  job.py  rules.py  staging.py  user_rules.py
backend/src/ccas/decryptor/: __init__.py  decrypt.py  job.py  password.py  staging.py
backend/src/ccas/ingestor/: __init__.py  auth.py  credentials.py  filters.py  gmail_client.py  job.py  retry.py  staging.py
backend/src/ccas/parser/: __init__.py  base.py  job.py  ocr.py  refund_utils.py  registry.py  result.py  staging.py
backend/src/ccas/pipeline/: __main__.py  filters.py  options.py  orchestrator.py  progress.py  summary.py  worker.py
backend/src/ccas/scheduler/: __main__.py  budget_evaluator.py  jobs.py  reminders.py
backend/src/ccas/shared/: __init__.py  filters.py  pipeline_types.py  progress.py
backend/src/ccas/storage/: atomic.py  database.py  models.py  oauth_secrets.py  paths.py  queries.py  secrets.py
backend/src/ccas/tools/: __init__.py  bank_configs.py  categories.py  cleanup_gmail_state.py  gmail_auth.py  reclassify.py  seed_bank_settings.py
backend/tests/e2e/: conftest.py  test_pipeline_error_path.py  test_pipeline_happy_path.py
backend/tests/fixtures/fubon/: captcha_response.txt  mail_with_link.html  spa_shell.html
backend/tests/integration/: conftest.py  test_analytics.py  test_analytics_v2.py  test_api_docs_toggle.py  test_auth.py  test_auth_ratelimit.py  test_auth_session.py  test_bills.py  test_budget_evaluator.py  test_budgets_router.py  test_cathay_api.py  test_docker_compose.py  test_esun_api.py  test_exports_router.py  test_exports_streaming_benchmark.py  test_fubon_api.py  test_health.py  test_overview.py  test_reminders_settings_router.py  test_rules_router.py  test_settings.py  test_settings_edge.py  test_setup_admin_router.py  test_setup_banks_router.py  test_setup_gmail.py  test_setup_login_credentials_router.py  test_setup_secrets_router.py  test_sinopac_api.py  test_staged_attachments.py  test_taishin_api.py  test_transactions.py  test_transactions_edit.py  test_ubot_api.py
backend/tests/integration/bot/: test_handlers.py
backend/tests/integration/classifier/: test_classify_priority.py  test_job.py  test_user_rules.py
backend/tests/integration/decryptor/: test_job.py
backend/tests/integration/ingestor/: test_dedup.py  test_fubon_live.py  test_gmail_integration.py  test_job.py  test_web_fetch_job.py
backend/tests/integration/parser/: conftest.py  test_cathay_parse_job.py  test_cathay_v1_pdf.py  test_ctbc_v1_pdf.py  test_esun_parse_job.py  test_esun_v1_pdf.py  test_fubon_parse_job.py  test_fubon_v1_pdf.py  test_job.py  test_sinopac_parse_job.py  test_sinopac_v1_pdf.py  test_taishin_parse_job.py  test_taishin_v1_pdf.py  test_ubot_parse_job.py  test_ubot_v1_pdf.py
backend/tests/integration/pipeline/: test_pipeline_runs_router.py  test_progress_reporter.py  test_trigger.py  test_worker_pipeline_run_status.py
backend/tests/integration/scheduler/: test_reminders.py
backend/tests/integration/tools/: test_bank_configs_env.py  test_categories_seed.py  test_seed_then_classify.py
backend/tests/unit/: conftest.py  test_config.py  test_errors.py  test_fubon_settings.py  test_log.py  test_messaging.py  test_module_exceptions.py
backend/tests/unit/api/: test_analytics_v2_helpers.py  test_auth_router.py  test_bills_router.py  test_deps_session.py  test_exports_helpers.py  test_schema_enum_sync.py  test_status_bridges.py
backend/tests/unit/bot/: test_app_error_handling.py  test_auth.py  test_client.py  test_formatting.py  test_handlers.py  test_main.py  test_notifications.py  test_notify_idempotency.py  test_notify_skip.py  test_queries.py
backend/tests/unit/classifier/: test_engine.py  test_job_batch_update.py  test_rules.py  test_staging.py  test_user_rules.py
backend/tests/unit/config/: test_docker_compose.py  test_settings_defaults.py  test_settings_multi_password.py
backend/tests/unit/decryptor/: test_decrypt.py  test_force_fetch.py  test_job.py  test_multi_password_fallback.py  test_password.py  test_staging.py
backend/tests/unit/ingestor/: test_auth.py  test_captcha.py  test_credentials.py  test_failed_retry.py  test_fetcher_framework.py  test_fetcher_registration.py  test_filters.py  test_force_safety.py  test_fubon_fetcher.py  test_fubon_fetcher_manual_staging.py  test_fubon_record_not_found.py  test_gmail_client.py  (+5 more)
(+793 files in other folders)
