[project]
name = "ccas"
version = "0.1.0"
description = "Credit Card Artifact System - automated bill parsing and reporting"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "alembic",
    "pydantic-settings",
    "pdfplumber",
    "pikepdf",
    "tabula-py",
    "python-telegram-bot",
    "google-api-python-client",
    "google-auth-oauthlib",
    "pyyaml",
    "rq",
    "redis",
    "apscheduler",
    "python-dotenv>=1.2.2",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccas"]

[tool.hatch.build.targets.editable]
packages = ["src/ccas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ccas"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pymupdf>=1.27.2.2",
]
